# RoyalGuard

./: .gitignore  Cargo.toml  LICENSE  README.md  RoyalGuard.sln  info_sample.json  sqlx-data.json
.github/workflows/: build-debug.yml  build.yml  release-windows.yml  release.yml  server.yml
RoyalGuard/: DiscordBot.cs  Model.cs  Program.cs  RoyalGuard.csproj  info_sample.json
RoyalGuard/Handlers/: CommandHandler.cs  NewMemberHandler.cs  PermissionsHandler.cs  ServerJoinHandler.cs  TrieHandler.cs
RoyalGuard/Handlers/Commands/: CommandHandler.cs
RoyalGuard/Helpers/Commands/: PrefixHelper.cs  StringRenderer.cs
RoyalGuard/Helpers/Data/: GuildInfoHelper.cs  RoyalGuardFactory.cs  TimeConversion.cs
RoyalGuard/Helpers/Embeds/: EmbedStore.cs
RoyalGuard/Migrations/: 20200414152256_InitialCreate.Designer.cs  20200414152256_InitialCreate.cs  20200416144320_AddGuilds.Designer.cs  20200416144320_AddGuilds.cs  20200416175003_AddWelcomes.Designer.cs  20200416175003_AddWelcomes.cs  20200419020601_prefixes.Designer.cs  20200419020601_prefixes.cs  20200419151555_guildrolestorage.Designer.cs  20200419151555_guildrolestorage.cs  20200423035511_RedoMutes.Designer.cs  20200423035511_RedoMutes.cs  20200423135749_AddMuteChannel.Designer.cs  20200423135749_AddMuteChannel.cs  20200423213230_RenameGuildStore.Designer.cs  20200423213230_RenameGuildStore.cs  20200501134225_PrefixMerge1.Designer.cs  20200501134225_PrefixMerge1.cs  20200501135834_PrefixMerge2.Designer.cs  20200501135834_PrefixMerge2.cs  20200505134708_CascadeDeletes1.Designer.cs  20200505134708_CascadeDeletes1.cs  20200505135751_CascadeDeletes2.Designer.cs  20200505135751_CascadeDeletes2.cs  20200505135956_CascadeDeletes3.Designer.cs  20200505135956_CascadeDeletes3.cs  20200507124422_AddDeleteTable.Designer.cs  20200507124422_AddDeleteTable.cs  20200508142316_RoleTable.Designer.cs  20200508142316_RoleTable.cs  RoyalGuardContextModelSnapshot.cs
RoyalGuard/Modules/: Bans.cs  Help.cs  Mute.cs  Mutes.cs  Other.cs  Purge.cs  Warn.cs
RoyalGuard/Services/: BotHostedService.cs  GuildDeleteService.cs
migrations/: 2020-08-18_20-14-16_create_guild_info.sql  2020-08-19_19-26-07_mod_config.sql  2020-08-20_19-16-42_create_warns.sql  2020-08-22_02-00-52_create_mutes.sql  2020-08-23_16-51-26_create_timed_mutes.sql  2020-08-24_14-20-58_create_new_members.sql  2020-08-30_00-53-04_create_reaction_roles.sql  20200819192607_mod_config.sql  20200824142058_create_new_members.sql  20200828133111_create_delete_store.sql  20200830005304_create_reaction_roles.sql  20211123202319_create_logging_config.sql
src/: main.rs
src/commands/: autorole.rs  bans.rs  config.rs  general.rs  kicks.rs  logging.rs  member_info.rs  mod.rs  mutes.rs  new_members.rs  purges.rs  reaction_roles.rs  roles.rs  support.rs  warns.rs
src/handlers/: event_handler.rs  framework.rs
src/helpers/: botinfo.rs  command_utils.rs  credentials_helper.rs  database_helper.rs  delete_buffer.rs  embed_store.rs  mod.rs  mute_helper.rs  permissions_helper.rs  time_conversion.rs  warn_helper.rs
src/reactions/: mod.rs  reaction_roles.rs
src/structures/: cmd_data.rs  commands.rs  errors.rs  mod.rs
systemd/: royalguard.service
(+1 files in other folders)
