[package]
name = "royalguard"
version = "0.1.0"
authors = ["kingbri <bdashore3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio  = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "process"] }
tracing-subscriber = "0.2.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "4.0.1"
futures = "0.3"
reqwest = "0.11"
regex = "1.4.3"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = true
features = ["model", "collector", "native_tls_backend"]

[dependencies.sqlx]
git = "https://github.com/ant32/sqlx"
branch = "tokio-1.0"
default-features = false
features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "offline"]

[target.'cfg(linux)'.dependencies.openssl]
version = "0.10"
features = ["vendored"]

[patch.crates-io.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = true
features = ["collector", "native_tls_backend"]
