[package]
name = "royalguard"
version = "0.1.0"
authors = ["kingbri <bdashore3@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio  = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "process"] }
tracing-subscriber = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.4.0"
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
regex = "1.4.3"
chrono = "0.4"
itertools = "0.10.0"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = true
features = ["model", "collector", "rustls_backend"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "offline"]
